--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\app\SharpRaven\packages.config" />
+  <repository path="..\app\SharpRaven-PCL\packages.config" />
+  <repository path="..\tests\SharpRaven.Pcl.UnitTests\packages.config" />
   <repository path="..\tests\SharpRaven.UnitTests\packages.config" />
 </repositories>
