--- a/src/app/SharpRaven/SharpRaven.csproj
+++ b/src/app/SharpRaven/SharpRaven.csproj
@@ -100,6 +100,9 @@
     <Compile Include="Utilities\SystemUtil.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\SharpRaven.nuspec">
+      <Link>SharpRaven.nuspec</Link>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
