--- a/src/app/SharpRaven/SharpRaven.csproj
+++ b/src/app/SharpRaven/SharpRaven.csproj
@@ -100,10 +100,8 @@
     <Compile Include="Utilities\SystemUtil.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\SharpRaven.nuspec">
-      <Link>SharpRaven.nuspec</Link>
-    </None>
     <None Include="packages.config" />
+    <None Include="SharpRaven.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
