--- a/src/app/SharpRaven/SharpRaven.nuspec
+++ b/src/app/SharpRaven/SharpRaven.nuspec
@@ -27,6 +27,7 @@
     </dependencies>
   </metadata>
   <files>
+    <file src="bin\Release\net40\SharpRaven.*" target="lib\net40" />
     <file src="bin\Release\net45\SharpRaven.*" target="lib\net45" />
     <file src="bin\Release\portable-net45+sl50+win+MonoAndroid10+xamarinios10+MonoTouch10\SharpRaven.*" target="lib\portable-net45+sl50+win+MonoAndroid10+xamarinios10+MonoTouch10" />
   </files>
